--- a/security.html
+++ b/security.html
@@ -53,7 +53,7 @@
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/synergy/job/oym0afwO'>Synergy BIS Careers - Security Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/synergy/job/oym0afwO'>Synergy BIS Careers - Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -153,11 +153,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/omadahealth/jobs/1916406'>Job Application for Senior Security Analyst at Omada Health</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/omadahealth/jobs/1916406'>Job Application for Senior Security Analyst at Omada Health</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oCg8afwU&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nYeipMwa'>Imperva Careers - Cloud Security Engineer, Managed Services</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oCg8afwU&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nYeipMwa'>Imperva Careers - Cloud Security Engineer, Managed Services</a></h5> 
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -165,7 +165,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/clear/jobs/1940466'>Job Application for  Senior Security Engineer at CLEAR - Corporate</a></h5> 
+<h5><a href='https://boards.greenhouse.io/clear/jobs/1940466'>Job Application for  Senior Security Engineer at CLEAR - Corporate</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -173,7 +173,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/catenamedia/a1ba34ad-e9d9-44a3-a8dd-7c25f3051069'>Catena Media - Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/catenamedia/a1ba34ad-e9d9-44a3-a8dd-7c25f3051069'>Catena Media - Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -213,7 +213,7 @@
 <p><span class="badge badge-light">Melbourne, Victoria, Australia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tri-ad/4f991877-0a5a-4217-b989-6bbb505f2656'>TRI-AD, Inc - Application Security Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/tri-ad/4f991877-0a5a-4217-b989-6bbb505f2656'>TRI-AD, Inc - Application Security Engineer</a></h5> 
 <p><span class="badge badge-light">Tokyo</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -262,7 +262,7 @@ tools and services; Work closely with developers to give advice on secure?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bandwidth/jobs/1929807'>Job Application for Security Compliance Analyst at Bandwidth</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bandwidth/jobs/1929807'>Job Application for Security Compliance Analyst at Bandwidth</a></h5> 
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
